added typing affect

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 </head>
 
-<body>
+<body onload = "typingeffect()" >
 
 
     <div class="back-image">
@@ -56,7 +56,7 @@
             <div class="text">
                 <div class="text-content">
                     <!-- <h3 class="quote">Experience is the name everyone gives to their mistakes.</h3> -->
-                    <h1 class="intro">Hi, I am Ravish Raj </h1>
+                    <h1 class="intro" id = "typing">Hi, I am <br> </h1>
                 </div>
             </div>
         </div>
@@ -173,7 +173,7 @@
 
     </div>
 
-
+    <script src="script/name.js"></script>
 
 </body>
 
