--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <!-- importing icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
 
@@ -23,29 +26,27 @@
 
 </head>
 
-<body onload = "typingeffect()" >
+<body onload="typingeffect()">
 
 
     <div class="back-image">
 
-        <nav class="navbar">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
-
-
-            <ul>
-                <div class="image">
-                    <!-- Add LOGO here -->
-                    <img src="img/ravish1.png" alt="Ravish Raj" id="logo">
+            <a class="navbar-brand" href="#">Ravish Raj</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-item nav-link active" href="#home">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="#about">About</a>
+                    <a class="nav-item nav-link" href="#skills">Skills</a>
+                    <a class="nav-item nav-link" href="#projects">Projects</a>
+                    <a class="nav-item nav-link" href="#contact">Contacts</a>
                 </div>
-
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-
-
+            </div>
         </nav>
 
 
@@ -55,8 +56,7 @@
         <div class="home-page" id="home">
             <div class="text">
                 <div class="text-content">
-                    <!-- <h3 class="quote">Experience is the name everyone gives to their mistakes.</h3> -->
-                    <h1 class="intro" id = "typing">Hi, I am <br> </h1>
+                    <h1 class="intro" id="typing"><br> </h1>
                 </div>
             </div>
         </div>
@@ -77,9 +77,10 @@
             I also do Competetive Programming and learning from it .
         </p>
         <div class="rating">
-            <p>CodeChef : 3 Star</p>
+            <p>CodeChef : <a href="https://www.codechef.com/users/ravishraj21" target="_blank"> ravishraj21</a>(3 Star)
+            </p>
 
-            <p>CodeForces : 1182</p>
+            <p>CodeForces : <a href="https://codeforces.com/profile/ravishraj" target="_blank"> ravishraj </a>(1182)</p>
 
         </div>
 
@@ -92,23 +93,23 @@
     <!-- Skills -->
 
     <div class="skills-page" id="skills">
-        <h1 class ="skills-head">SKILLS</h1>
-        <p class = "skills-section">Current technolgies which I am learning and working</p>
+        <h1 class="skills-head">SKILLS</h1>
+        <p class="skills-section">Current technolgies which I am learning and working</p>
         <div class="skills">
 
             <!-- LOGO bhi add krna hai hr language kaa -->
-            <ul class = "tech1">
+            <ul class="tech1">
 
                 <li>
-                    <img src = "img/C.jpg" alt="C">
+                    <img src="img/C.jpg" alt="C">
                 </li>
 
                 <li>
-                    <img src = "img/C++.jpg" alt = "">
+                    <img src="img/C++.jpg" alt="">
                 </li>
 
                 <li>
-                    <img src = "img/python.jpg" alt = "">
+                    <img src="img/python.jpg" alt="">
                 </li>
 
             </ul>
@@ -116,15 +117,15 @@
             <ul class="tech2">
 
                 <li>
-                    <img src = "img/HTML-5.jpg" alt = "">
+                    <img src="img/HTML-5.jpg" alt="">
                 </li>
 
                 <li>
-                    <img src = "img/css3.jpg" alt = "">
+                    <img src="img/css3.jpg" alt="">
                 </li>
 
                 <li>
-                    <img src = "img/JS.jpg" alt = "">
+                    <img src="img/JS.jpg" alt="">
                 </li>
 
             </ul>
@@ -136,14 +137,74 @@
 
     <!-- Projects -->
 
-    <div class="projects-page" id="projects">
+    <section class="section_padding projects" id="projects">
+        <div class="container">
+            <div class="row">
+                <div class="section_title text-center">
+                    <h3 class="projects-head">PROJECTS</h3>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12">
+                    <div class="project-item">
+                        <div class="part-img">
+                            <a href="#">
+                                <img class="img-fluid" src="img/portfolio.PNG" alt="project1"></a>
+                            <!-- <div class="post-info-category">
+                                <a href="#">View project</a>
+                            </div> -->
+                        </div>
+                        <div class="content">
+                            <div class="title">
+                                <h4 class="project-heading">My Portfolio</h4>
+                            </div>
+                            <!-- <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur repudiandae
+                                adipisci, eos
+                                officiis est dolores!</p> -->
+                        </div>
+                    </div>
+                </div>
 
+                <div class="col-lg-4 col-md-4 col-sm-12">
+                    <div class="project-item">
+                        <div class="part-img">
+                            <a href="#">
+                                <img class="img-fluid" src="img/randomText.PNG" alt="project1"></a>
+                            <!-- <div class="post-info-category">
+                                <a href="#">View project</a>
+                            </div> -->
+                        </div>
+                        <div class="content">
+                            <div class="title">
+                                <h4 class="project-heading">Random Text Generator</h4>
+                            </div>
+                            <!-- <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur repudiandae
+                                adipisci, eos
+                                officiis est dolores!</p> -->
+                        </div>
+                    </div>
+                </div>
 
-        <h1 class = "projects-head">PROJECTS</h1>
-
-        <p>Blank</p>
-
-    </div>
+                <div class="col-lg-4 col-md-4 col-sm-12">
+                    <div class="project-item">
+                        <div class="part-img">
+                            <a href="#">
+                                <img class="img-fluid" src="img/colorflipper.PNG" alt="Color Flipper"></a>
+                            <!-- <div class="post-info-category">
+                                <a href="#">View project</a>
+                            </div> -->
+                        </div>
+                        <div class="content">
+                            <div class="title">
+                                <h4 class="project-heading">Color Flipper</h4>
+                            </div>
+                            <!-- <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur repudiandae
+                                adipisci, eos
+                                officiis est dolores!</p> -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
@@ -152,7 +213,7 @@
     <div class="contact-page" id="contact">
 
         <div class="contact-details">
-            <h1 class = "contact-head">CONTACTS</h1>
+            <h1 class="contact-head">CONTACTS</h1>
 
             <p class="last-lines">
                 Living , learning & leveling up one day at a time.
