--- a/index.html
+++ b/index.html
@@ -18,22 +18,59 @@
     <link rel="stylesheet" href="css/style.css">
 
     <style>
-        .back-image {
-            background-image: url('img/backg.jpg');
+        .home-page {
+            background-image: url('img/purple2.gif');
             background-repeat: no-repeat;
+            background-size: cover;
+
         }
     </style>
 
 </head>
 
+<header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">My Portfolio</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#home">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#skills">Skills</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#projects">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">Contacts</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
+
 <body onload="typingeffect()">
 
 
-    <div class="back-image">
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
-            <a class="navbar-brand" href="#">Ravish Raj</a>
+    <div class="home-page" id="home">
+
+
+
+        <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light" id = "nav-menu">
+
+            <a class="navbar-brand" href="#">My Porfolio</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -47,20 +84,15 @@
                     <a class="nav-item nav-link" href="#contact">Contacts</a>
                 </div>
             </div>
-        </nav>
+        </nav> -->
 
 
 
         <!-- Home -->
 
-        <div class="home-page" id="home">
-            <div class="text">
-                <div class="text-content">
-                    <h1 class="intro" id="typing"><br> </h1>
-                </div>
-            </div>
+        <div class="text-content">
+            <h1 class="intro" id="typing"><br></h1>
         </div>
-
     </div>
 
 
