--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             I also do Competetive Programming and learning from it .
         </p>
         <div class="rating">
-            <p>CodeChef : <a href="https://www.codechef.com/users/ravishraj21" target="_blank"> ravishraj21</a>(3 Star)
+            <p>CodeChef : <a href="https://www.codechef.com/users/ravishraj21" target="_blank"> ravishraj21</a>(3 <i class="fas fa-star"></i>)
             </p>
 
             <p>CodeForces : <a href="https://codeforces.com/profile/ravishraj" target="_blank"> ravishraj </a>(1182)</p>
